# crc32c4beam

./: .gitmodules  CMakeLists.txt  LICENSE.md  Makefile  README.md  arm_small_batch.patch  rebar.config
.github/workflows/: main.yml
c_src/: crc32c4beam_nif.c
src/: crc32c4beam.app.src  crc32c4beam.erl
